Version: 0.5.0
Date: 2022-05-02
  Changes:
    - refactor for fixing desyncs
    - filter options for presentator
    - user setting: show impossible recipes (otherwise they got filtered)
    - reminder selector: better grouping of workers and recipes
    - [tech] Array class got Length field to be able to handle nil values
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 2022-04-11
  Bugfixes:
    - Fixing Remindor data is lost when loading a save file
    - Multiplayer: Mitigating Desync issue when loading a save file where any panel is open
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 2022-04-09
  Bugfixes:
    - Mitigating Desync issue when loading a save file where reminder panel is open
    - Fixing Crash when getting information from mod-defined module-categories
---------------------------------------------------------------------------------------------------
Version: 0.3.33
Date: 2022-04-02
  Bugfixes:
    - fixing multiple lines of the same recipe
    - fixing multiple icons for the same worker
    - mitigating Large recipe columns are jerky during handcrafts or research completion 
  Changes:
    - Yellow backgroung for recipes that are currently in research queue
---------------------------------------------------------------------------------------------------
Version: 0.3.32
Date: 2022-03-31
  Bugfixes:
    - fixing crash when opening a fuel item.
---------------------------------------------------------------------------------------------------
Version: 0.3.31
Date: 2022-03-27
  Bugfixes:
    - fixing that fixed recipes are not presented anymore.
  Changes:
    - show mini-recipe panel for improper recipes also
    - show fuel category related information
    - speed information on worker sprites improved
    - show fluid fuel categories and their burners
    - show information concerning modules