@@ -3,11 +3,13 @@
     "version": "0.5.0",
     "name": "ingteb",
     "author": "ixu",
+    "source": "https://github.com/hahoyer/factorio-mod-ingteb",
     "description": "Ingame technology browser including...\n    - backwards search: report any place where it is referenced\n    - initiate research from information panels\n    - initiate crafting from information panels\n    - \"pipette\": selection from information panels\n    - filter information panel by research status\n    - reminder panel with autoresearch and autocrafting\n    [de, en, ja, zn-CH]",
     "factorio_version": "1.1",
     "dependencies": [
         "base >= 1.1.0",
         "flib >= 0.9.2",
+        "on_research_queue_changed",
         "? sonaxaton-research-queue-with-interface"
     ]
 }
